Fix vertical alignment on TinyPilot logo

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -45,7 +45,7 @@ img {
 }
 
 .navbar .brand {
-  margin: 0.7rem 0;
+  margin: 1rem 0 0.6rem 0;
 }
 
 .navbar .brand img {
